upd: delete and update methods
